data/derived/comb/progs/unify/prog8879.ml.out
Characters 141-145:
  else seen :: [h] in
       ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
